--- a/New_Project/New_Project.csproj
+++ b/New_Project/New_Project.csproj
@@ -102,6 +102,8 @@
     <Content Include="Content\fontawesome.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="JS\jquery.treeview.css" />
+    <Content Include="JS\jquery.treeview.js" />
     <Content Include="Models\Info.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Info.edmx</DependentUpon>
